[gd_scene load_steps=18 format=3 uid="uid://cje0ll6pwd5yp"]

[ext_resource type="Texture2D" uid="uid://qaqr2ks5kf6f" path="res://assets/ui/fight_ui/description_texture.png" id="1_p5af0"]
[ext_resource type="Script" path="res://scripts/UI/character_display.gd" id="2_5ghbd"]
[ext_resource type="FontFile" uid="uid://chxj0wt4i4epv" path="res://assets/fonts/lato/Lato-Regular.ttf" id="3_fa86o"]
[ext_resource type="Texture2D" uid="uid://dfsimsey84bkf" path="res://assets/chars/male/male_13.png" id="5_j8110"]
[ext_resource type="Texture2D" uid="uid://ckxik8lsk2na5" path="res://assets/ui/party_ui/rect_frame.png" id="6_u4r2h"]
[ext_resource type="Texture2D" uid="uid://cqoog8jnypwmi" path="res://assets/ui/buttons/close_button/close_button_n.png" id="7_nl268"]
[ext_resource type="Texture2D" uid="uid://b2vp8sx5lstxj" path="res://assets/ui/buttons/close_button/close_button_p.png" id="8_541ib"]
[ext_resource type="Texture2D" uid="uid://d25w1yfqu88j2" path="res://assets/ui/buttons/close_button/close_button_h.png" id="9_jskip"]
[ext_resource type="Texture2D" uid="uid://bl4uj1vo5jgf0" path="res://assets/ui/buttons/circle_button/special_ability_frame_n.png" id="9_oi6rk"]
[ext_resource type="Texture2D" uid="uid://0oew1uuyn6mv" path="res://assets/ui/buttons/circle_button/special_ability_frame_p.png" id="10_6g4eb"]
[ext_resource type="Texture2D" uid="uid://csymekdp54xcs" path="res://assets/ui/buttons/circle_button/special_ability_frame_h.png" id="11_w3d5e"]
[ext_resource type="Texture2D" uid="uid://bjyj8oi6bsuxm" path="res://assets/ui/classes_icons/warrior.png" id="12_2ispd"]

[sub_resource type="LabelSettings" id="LabelSettings_r0k1a"]
font = ExtResource("3_fa86o")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_76707"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m6uat"]
gradient = SubResource("Gradient_76707")
width = 128

[sub_resource type="Gradient" id="Gradient_5hgs1"]
colors = PackedColorArray(0.1547, 0.382346, 0.973716, 1, 0.152941, 0.380392, 0.972549, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qxm63"]
gradient = SubResource("Gradient_5hgs1")
width = 128

[node name="background" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -78.0
offset_right = 275.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p5af0")
expand_mode = 5
script = ExtResource("2_5ghbd")
character_portrait = 13

[node name="infos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -56.0
offset_right = 78.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "Halfai
 Lvl : 1
 XP : 0/1000"
label_settings = SubResource("LabelSettings_r0k1a")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="xp_bar" type="TextureProgressBar" parent="infos"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 2.0
offset_right = 64.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1000.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_m6uat")
texture_progress = SubResource("GradientTexture1D_qxm63")

[node name="avatar_background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.0
offset_top = -58.0
offset_right = 157.0
offset_bottom = 42.0
grow_vertical = 2
color = Color(0.509804, 0.313726, 0.160784, 1)

[node name="avatar_portrait" type="TextureRect" parent="avatar_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -50.0
offset_right = 42.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_j8110")
expand_mode = 3

[node name="frame" type="TextureRect" parent="avatar_background"]
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 105.0
offset_bottom = 106.0
texture = ExtResource("6_u4r2h")
expand_mode = 1
stretch_mode = 4

[node name="delete_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -32.0
offset_right = 531.0
offset_bottom = 608.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_nl268")
texture_pressed = ExtResource("8_541ib")
texture_hover = ExtResource("9_jskip")
stretch_mode = 0

[node name="class_badge" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_left = 346.0
offset_top = 31.0
offset_right = 446.0
offset_bottom = 131.0
texture_normal = ExtResource("9_oi6rk")
texture_pressed = ExtResource("10_6g4eb")
texture_hover = ExtResource("11_w3d5e")
ignore_texture_size = true
stretch_mode = 5

[node name="class_icon" type="TextureRect" parent="class_badge"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_2ispd")
expand_mode = 1
stretch_mode = 5
